# motsog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
src/: bit.c  bit.h  misc.c  misc.h  values.c  values.h
src/chess/: attacks.c  attacks.h  bitboard.c  bitboard.h  board.c  board.h  masks.c  masks.h  move.c  move.h  move_gen.c  move_gen.h  perft.c  perft.h  position.c  position.h  types.c  types.h  utility.c  utility.h  zobrist.c  zobrist.h
src/eval/: eval.c  eval.h  values.c  values.h
src/search/: mcts.c  mcts.h  move_ordering.c  move_ordering.h  node.c  node.h  pp.c  pp.h  search.c  search.h  tt.c  tt.h
test/: CMakeLists.txt  test_runner.c
tests/: test_attacks.c  test_perft.c
